# ENISI-MSM

./: .project  BRANCH_TODO.txt  CMakeLists.txt  INSTALL.mkd  LICENSE.md  README.mkd  SA_prcc_codefile  TODO  model.props  run.sh
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/src/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/src/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: ENISI Clean All.launch  ENISI Start.launch
.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Howtorunasimulation/: README.mkd  ReadMe.mkd  config.props  job.sh  model.props  run.props  run.sh
Processing/Figures/: Fig2_Code.ipynb  Fig3_Code.ipynb  Fig4_Code.ipynb  Fig5_Code.ipynb
Processing/Others/: average_and_SD.py  lp_code.py  tsvcsv.sh
Processing/ParameterSets/: model_CD4Cre.props  model_Clodronate.props  model_LysMCre.props  model_WT.props  model_epipro0.01.props  model_epipro0.03.props  model_epipro0.05.props  model_epipro0.07.props
Sensitivity-Analysis/: PRCC_activeinactiveinputs-added.xlsx  Parameters.xlsx  README.mkd  ReadMe.txt  SobolIndex_data_generation.m  Stage1-PRCC.ipynb  Stage1-PRCC_barplots.R  Stage2-BuildTempMM.R  Stage2-SA-temporal6tps.R  Stage2-inputfilegeneration.m  design_matrix_generation.m  stage1_design_search.m  stage2_design_search.m
config/: model.props
enisi/msm/hpc/branches/divya_branch/: Makefile  benchmark.sh
enisi/msm/hpc/branches/divya_branch/src/: ValueLayerDiffuser.cpp  matrix.h
enisi/msm/hpc/branches/divya_branch/trunk/: INSTALL.mkd  README.mkd
enisi/msm/hpc/branches/hpylori_compartments/: BRANCH_TODO.txt  TODO  benchmark.sh  model.props  run.props  run.sh
enisi/msm/hpc/branches/hpylori_compartments/.metadata/: version.ini
enisi/msm/hpc/branches/hpylori_compartments/config/: CD4.cps  model.props
enisi/msm/hpc/branches/hpylori_compartments/hpylori_compartments/: .project  INSTALL.mkd  TODO
enisi/msm/hpc/branches/hpylori_compartments/patches/: DirectedVertex.h.patch  GridComponents.h.patch  Point.h.patch
enisi/msm/hpc/branches/hpylori_compartments/src/: .cproject  .directory  CMakeLists.txt  ENISI.xmi  InitSharedContextTestFixture.h  ScheduleTestFixture.h  SiloWriterTest.cpp  ValueLayer.h  ValueLayerTest.cpp  benchmark.cpp  core  dotout.dot  gmock.cpp  main.cpp  matrix.h  repast_hpc  tags
enisi/msm/hpc/branches/phuong_branch/: CHANGELOG.mkd  gmock.sh
hpylori_compartments/: CHANGELOG.mkd
hpylori_compartments/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
hpylori_compartments/.metadata/.plugins/org.eclipse.debug.core/.launches/: ENISI Start.launch
hpylori_compartments/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
hpylori_compartments/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
hpylori_compartments/config/: run.props
hpylori_compartments/patches/: RepastProcess.h.patch  SharedBaseGrid.cpp.patch  SharedDiscreteSpace.h.patch  bv_silo.patch
hpylori_compartments/scripts/debug/: debugwait.gdb
hpylori_compartments/scripts/shadowfax/: benchmark.qsub.miep_q.sh  interactive-shell.sh
hpylori_compartments/src/: dot.dot
hpylori_compartments/src/agent/: BacteriaGroup.h  Cytokine.h  DendriticsGroup.h  MacrophageGroup.h  TcellODE.cpp
hpylori_compartments/src/compartment/: Compartment.cpp
hpylori_compartments/src/grid/: Properties.h
modelfiles/: MSM_CD4.cps  MregDiff.cps
patches/: Context.h.patch  RepastProcess.h.patch  SharedBaseGrid.h.patch  UndirectedVertex.h.patch
scripts/: get_visit_platform.sh
scripts/debug/: gdb.sh
scripts/shadowfax/: benchmark.qsub.miep_q.sh
src/: .cproject  .project  CMakeLists.txt  ENISI.xmi  InitSharedContextTestFixture.h  benchmark.cpp  main.cpp
src/DataWriter/: LocalFile.cpp  LocalFile.h
src/agent/: AgentFactory.cpp  AgentFactory.h  AgentFactoryTest.cpp  AgentGroup.cpp  AgentGroup.h  AgentGroupPackage.cpp  AgentGroupPackage.h  AgentPackage.cpp  AgentPackage.h  AgentStates.cpp  AgentStates.h  Bacteria.cpp  Bacteria.h  BacteriaGroup.cpp  BacteriaGroup.h  BacteriaTest.cpp  COPASI.h  CellGroup.cpp  CellGroup.h  CellGroupImpl.h  CoordMap.h  Cytokine.cpp  Cytokines.cpp  Cytokines.h  Dendritics.cpp  Dendritics.h  DendriticsGroup.cpp  DendriticsGroup.h  DendriticsTest.cpp  ENISIAgent.cpp  ENISIAgent.h  EpithelialCellGroup.cpp  EpithelialCellGroup.h  GroupInterface.cpp  GroupInterface.h  HPyloriGroup.cpp  HPyloriGroup.h  HelicobacterPylori.h  ImmuneCell.cpp  ImmuneCell.h  (+20 more)
src/agent/test/: CellGroupCompartmentMovementTest.cpp  CellGroupSyncTest.cpp
src/compartment/: CellLayer.cpp  CellLayer.h  CellLayerImpl.h  Compartment.cpp  Compartment.h  DiffuserLayer.cpp  DiffuserLayer.h  ICompartmentLayer.cpp  ICompartmentLayer.h  Projection.h
src/data/: DiffuserData.cpp
src/diffuser/: Diffuser.cpp  Diffuser.h  DiffuserImpl.cpp  DiffuserImpl.h  DiffuserPackage.h  ParallelDiffuser.cpp
src/diffuser/test/: DiffuserTest.h  ParallelDiffuserTest.cpp
src/grid/: Borders.cpp  Borders.h  Iterator.cpp  Properties.h
src/model/: HPyloriModel.cpp  HPyloriModel.h  HPyloriModelTest.cpp  ModelBuilderTest.cpp  MucosalCD4ModelBase.cpp  MucosalCD4ModelBase.h  MucosalCD4ModelMultiCore.h  MucosalCD4ModelMultiCoreWithGroups.cpp  MucosalCD4ModelMultiCoreWithGroups.h  SpatialProjectionTest.cpp
src/test/: CellGroupCompartmentMovementTest.cpp
(+211 files in other folders)
